--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 # Site
-name: "Memoirs"
-title: "Memoirs"
-description: "I will take you on the fabulous world of exploration. Travel, culture, lifestyle. Eat, Pray, Love!"
+name: "지산목한의원"
+title: "지산목한의원 홈페이지"
+description: "공릉동 한의원, 지산목한의원"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: /jekyll-theme-memoirs
+# baseurl: /jekyll-theme-memoirs
+baseurl: 'http://jisanmok.github.io/'
 google_analytics: 'UA-xxxxxxxx-1'
 disqus: 'demowebsite'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
